kubernetes/api-carros-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-carros
  labels:
    run: api-carros
spec:
  ports:
    - port: 8088
      targetPort: 8088
      protocol: TCP
      nodePort: 30001
  type: NodePort
  selector:
    app: api-carros
