kubernetes/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db-mysql
  labels:
    run: db-mysql
spec:
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  selector:
    app: db-mysql
