kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  rules:
    - host: "carros.com"
      http:
        paths:
          - pathType: Prefix
            path: "/api/carros"
            backend:
              service:
                name: api-carros
                port:
                  number: 8088
          - pathType: Prefix
            path: "/api/compra"
            backend:
              service:
                name: api-compras
                port:
                  number: 8089
# ajust /etc/hosts bellow:
# 192.168.49.2	carros.com
# where: 192.168.49.2 is minikube IP
